# fabrique_test

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  readme.md  requirements.txt
fabrique_test/: settings.py  urls.py
surveys/: models.py  services.py
surveys/api/: serializers.py  urls.py  views.py
surveys/migrations/: 0001_initial.py  0002_answer_question.py  0003_startedsurvey_surveyanswer.py  0004_auto_20211216_2307.py  0005_auto_20211217_0021.py
