[tool.poetry]
name = "fabrique_test"
version = "0.1.0"
description = ""
authors = ["kiriharu <kiriharu@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "2.2.10"
djangorestframework = "^3.12.4"
django-debug-toolbar = "^3.2.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
